ontol/ontol-compiler/test-cases/error/rel/only_entities_may_have_reverse_rel.on
def foo ()
def bar ()
rel {foo} 'a'[]::'aa' bar // ERROR only entities may have named reverse relationship
rel {foo} 'b'::'bb' text // ERROR only entities may have named reverse relationship
